Update all non major Gradle dependencies (#492)
* Update all non major Gradle dependencies
* Fix for libc6 vulnerability (copied from other services’ PRs)
* Specify exact testing dependency version of mockito-inline (unclear what the issue was but tests failed)
* Use version 1.3.1 of localstack docker image throughout (was 1.2 in some situations)
NB: version 2+ doesn't appear to work